[package]
name = "axe_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.26.0", features = ["debug-render-3d"] }
leafwing-input-manager = "0.13.3"

[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3
